Global focus styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:focus {
+  @apply outline-none;
+  box-shadow: 0 0 0 4px rgb(194 65 12);
+}
